--- a/sagemaker_config.json
+++ b/sagemaker_config.json
@@ -1,12 +1,11 @@
 {
-    "region": "us-west-1",
+    "region": "us-east-1",
     "api_name": "predict",
-    "skip_stack_deployment": "false",
-    "instance_type": "ml.t2.medium",
+    "instance_type": "ml.g4dn.xlarge",
     "initial_instance_count": 1,
     "workers": 3,
     "timeout": 60,
     "enable_data_capture": false,
-    "data_capture_s3_prefix": "s3://bucket-name/optional/predix",
+    "data_capture_s3_prefix": "s3://cis-cliu/exp/predict",
     "data_capture_sample_percent": 100
 }
